--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -11,6 +11,7 @@
 <div class="container my-5">
     <div class="d-grid gap-2">
         <a href="{% url 'creatediscipline' %}"><button class="btn btn-primary" type="button">Добавить дисциплины</button></a>
+        <a href="{% url 'disciplinelist' %}"><button class="btn btn-primary" type="button">Список Дисциплин</button></a>
         <a href="{% url 'create' %}"><button class="btn btn-primary" type="button">Ввести исходные данные для группы</button></a>
         <a href="{% url 'create1' %}"><button class="btn btn-primary" type="button">Добавление группы</button></a>
         <a href="{% url 'createteacher' %}"><button class="btn btn-primary" type="button">Добавить преподователя</button></a>
