--- a/templates/shtatnoe.html
+++ b/templates/shtatnoe.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container my-5">
-  <table class="table table-secondary" >
+  <table  class="table table-secondary table-hover">
       <thead>
       <tr>
         <th scope="col">Ф.И.О преподователя</th>
@@ -20,42 +20,76 @@
         <th scope="col">Штатные единицы/бюджет</th>
         <th scope="col">Штатные единицы/контракт/очное</th>
         <th scope="col">Штатные единицы/контракт/заочное</th>
+          <th scope="col">Штатные единицы/контракт/Всего ставок</th>
+          <th scope="col">Количество часов</th>
         <th scope="col">Учебная нагрузка/бюджет</th>
         <th scope="col">Учебная нагрузка/контракт/очное</th>
         <th scope="col">Учебная нагрузка/контракт/заочное</th>
       </tr>
       {% for teacher in teachers %}
           {% if teacher.is_budget %}
-          <tr class="table-warning">
-              <td>{{ teacher.name }}</td>
-              <td>{{ teacher.job_title }}</td>
+          <tr class="table-hover">
+              <td>{{ teacher.get_full_name }}</td>
+              <td>{{ teacher.get_job_title_display }}</td>
               <td>{{ teacher.zvanie }}</td>
               <td>{{ teacher.ped_staj }}</td>
               <td>{{ teacher.shtat_sovmest }}</td>
               <td>{{ teacher.stavka }}</td>
               <td>{{ 0 }}</td>
+              <td>{{ teacher.zaochnoe_stavka }}</td>
+              <td>{{ teacher.get_vsego_stavok }}</td>
+              <td>{{ teacher.get_time }}</td>
+              {% if teacher.get_time > teacher.vsego_uchebnyh_chasov %}
+                  <td class="table-danger">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+                  {% else %}
+                  <td class="table-secondary">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+              {% endif %}
               <td>{{ 0 }}</td>
-              <td>{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
-              <td>{{ 0 }}</td>
-              <td>{{ 0 }}</td>
+              {% for i in teacher.teacherr.all %}
+                  {% for group in i.group_id.all %}
+                      {% if group.zaochnoe == True %}
+                          {% if teacher.get_time_zaochnoe > teacher.vsego_uchebnyh_chasov %}
+                              <td class="table-danger">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+                              {% else %}
+                              <td class="table-secondary">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+                          {% endif %}
+                      {% else %}
+
+                      {% endif %}
+                  {% endfor %}
+              {% endfor %}
           </tr>
           {% endif %}
       {% endfor %}
 
       {% for teacher in teachers %}
           {% if teacher.is_budget == False %}
-          <tr class="table-danger">
-              <td>{{ teacher.name }}</td>
-              <td>{{ teacher.job_title }}</td>
+          <tr class="table-hover">
+              <td>{{ teacher.get_full_name }}</td>
+              <td>{{ teacher.get_job_title_display }}</td>
               <td>{{ teacher.zvanie }}</td>
               <td>{{ teacher.ped_staj }}</td>
               <td>{{ teacher.shtat_sovmest }}</td>
               <td>{{ 0 }}</td>
               <td>{{ teacher.stavka }}</td>
+              <td>{{ teacher.zaochnoe_stavka }}</td>
+              <td>{{ teacher.get_vsego_stavok }}</td>
+              <td>{{ teacher.get_time }}</td>
               <td>{{ 0 }}</td>
-              <td>{{ 0 }}</td>
-              <td>{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
-              <td>{{ 0 }}</td>
+              {% if teacher.get_time > teacher.vsego_uchebnyh_chasov %}
+                  <td class="table-danger">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+                  {% else %}
+                  <td class="table-secondary">{{ teacher.vsego_uchebnyh_chasov|floatformat:1 }}</td>
+              {% endif %}
+              {% for i in teacher.teacherr.all %}
+                  {% for group in i.group_id.all %}
+                          {% if teacher.get_time_zaochnoe > group.get_vsego_ucheb_chasov %}
+                              <td class="table-danger">{{ group.get_vsego_ucheb_chasov|floatformat:1 }}</td>
+                              {% else %}
+                              <td class="table-secondary">{{ group.get_vsego_ucheb_chasov|floatformat:1 }}</td>
+                          {% endif %}
+                  {% endfor %}
+              {% endfor %}
           </tr>
           {% endif %}
       {% endfor %}
