--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -13,15 +13,14 @@
         <p>
         <a href="{% url 'creatediscipline' %}"><button class="btn btn-primary" type="button">Добавить дисциплины</button></a>
         <a href="{% url 'disciplinelist' %}"><button class="btn btn-primary" type="button">Список Дисциплин</button></a>
-        <a href="{% url 'create' %}"><button class="btn btn-primary" type="button">Ввести исходные данные для группы</button></a>
-        <a href="{% url 'create1' %}"><button class="btn btn-primary" type="button">Добавление группы</button></a>
+        <a href="{% url 'create' %}"><button class="btn btn-primary" type="button">Добавить группу</button></a>
         <a href="{% url 'createteacher' %}"><button class="btn btn-primary" type="button">Добавить преподователя</button></a>
         </p>
         <p>
         <a href="{% url 'createconnects' %}"><button class="btn btn-primary" type="button">Связать</button></a>
         <a href="{% url 'connectlist' %}"><button class="btn btn-primary" type="button">Список связок</button></a>
         <a href="{% url 'teacherlist' %}"><button class="btn btn-primary" type="button">Список преподователей</button></a>
-        <a href="{% url 'showgroupp' %}"><button class="btn btn-primary" type="button">Список групп</button></a>
+        <a href="{% url 'showgroup' %}"><button class="btn btn-primary" type="button">Список групп</button></a>
         <a href="{% url 'vedomost' %}"><button class="btn btn-primary" type="button">Сводная ведомость</button></a>
         <a href="{% url 'shtatnoe' %}"><button class="btn btn-primary" type="button">Штатное расписание</button></a>
         </p>
