--- a/templates/creatediscipline.html
+++ b/templates/creatediscipline.html
@@ -20,6 +20,20 @@
                 {{ form|crispy }}
                 <button type="submit" class="btn btn-success">Добавить</button>
                 </form>
+                <p></p>
+                <p></p>
+                <h3>Подсказки</h3>
+                    <p>Академсоветник</p>
+                    <p>Учебная практика</p>
+                    <p>Производственная практика</p>
+                    <p>Предквалификационная практика</p>
+                    <p>Педагогическая практика</p>
+                    <p>Научно-исследовательская практика</p>
+                    <p>Защита выпускной квалификационной работы
+                    <p>Государственный экзамен по направлению потготовки</p>
+                    <p>Руководство магистрских диссертаций</p>
+                    <p>Руководство аспирантами, соискателями</p>
+
             </div>
           </div>
     </div>
