--- a/templates/connectlist.html
+++ b/templates/connectlist.html
@@ -9,23 +9,29 @@
 <body>
 
 <div class="container my-5">
+  <a href="{% url 'teacher' %}"><button class="btn btn-primary" type="button">Главное</button></a>
+    <p>
+
+    </p>
   <table class="table table-secondary" >
       <thead>
       <tr>
         <th scope="col">Преподователь</th>
         <th scope="col">Группа</th>
+        <th scope="col">Дисциплина</th>
+        <th scope="col">Всего учебных часов</th>
       </tr>
       {% for i in data %}
           <tr class="table-warning">
               <td>{{ i.teacher }}</td>
-              <td>{{ i.group_id }}</td>
+              <td>{{ i.name }}</td>
+              <td>{{ i.discipline_name }}</td>
+              <td>{{ i.vsego|floatformat:1 }}</td>
               <td><a href="{% url 'deleteconnect' i.id %}"><button class="btn btn-danger" type="button">Удалить</button></a></td>
           </tr>
 
       {% endfor %}
 
   </table>
-<!--  <a href="{% url 'export_excel_vedomost' %}"><button class="btn btn-primary" type="button">Экспорт на excel</button></a>-->
-</div>
 </body>
 </html>
