--- a/templates/teacher_list.html
+++ b/templates/teacher_list.html
@@ -6,87 +6,87 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Teacher</title>
     <style>
-        * {box-sizing: border-box;}
+     * {box-sizing: border-box;}
 
-        body {
-          margin: 0;
-          font-family: Arial, Helvetica, sans-serif;
-        }
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-        .topnav {
-          overflow: hidden;
-          background-color: #e9e9e9;
-        }
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
 
-        .topnav a {
-          float: left;
-          display: block;
-          color: black;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-          font-size: 17px;
-        }
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-        .topnav a:hover {
-          background-color: #ddd;
-          color: black;
-        }
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-        .topnav a.active {
-          background-color: #2196F3;
-          color: white;
-        }
+.topnav a.active {
+  background-color: #2196F3;
+  color: white;
+}
 
-        .topnav .search-container {
-          float: right;
-        }
+.topnav .search-container {
+  float: right;
+}
 
-        .topnav input[type=text] {
-          padding: 6px;
-          margin-top: 8px;
-          font-size: 17px;
-          border: none;
-        }
+.topnav input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  border: none;
+}
 
-        .topnav .search-container button {
-          float: right;
-          padding: 6px;
-          margin-top: 8px;
-          margin-right: 16px;
-          background: #ddd;
-          font-size: 17px;
-          border: none;
-          cursor: pointer;
-        }
+.topnav .search-container button {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
 
-        .topnav .search-container button:hover {
-          background: #ccc;
-        }
+.topnav .search-container button:hover {
+  background: #ccc;
+}
 
-        @media screen and (max-width: 600px) {
-          .topnav .search-container {
-            float: none;
-          }
-          .topnav a, .topnav input[type=text], .topnav .search-container button {
-            float: none;
-            display: block;
-            text-align: left;
-            width: 100%;
-            margin: 0;
-            padding: 14px;
-          }
-          .topnav input[type=text] {
-            border: 1px solid #ccc;
-          }
-        }
+@media screen and (max-width: 600px) {
+  .topnav .search-container {
+    float: none;
+  }
+  .topnav a, .topnav input[type=text], .topnav .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
     </style>
 </head>
 <body>
 
 <div class="container my-5">
     <div class="topnav">
-      <a href="{% url 'creatediscipline' %}"><button class="btn btn-primary" type="button">Добавить дисциплины</button></a>
+      <a href="{% url 'teacher' %}"><button class="btn btn-primary" type="button">Главное</button></a>
       <a href="{% url 'create' %}"><button class="btn btn-primary" type="button">Добавить группу</button></a>
       <a href="{% url 'createteacher' %}"><button class="btn btn-primary" type="button">Добавить преподователя</button></a>
       <a href="{% url 'createconnects' %}"><button class="btn btn-primary" type="button">Связать</button></a>
@@ -110,7 +110,7 @@
         <a href="{% url 'shtatnoe' %}"><button class="btn btn-primary" type="button">Штатное расписание</button></a>
         </p>
     </div>
-{% for teacher in teachers %}
+{% for teacher in object_list %}
 <table class="table table-warning table-hover">
     <p>
 
