--- a/api/teacher/templates/createteacher.html
+++ b/api/teacher/templates/createteacher.html
@@ -1,5 +1,4 @@
 {% load static %}
-{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,17 +10,30 @@
 </head>
 <body>
     <div class="container">
-          <div class="row justify-content-center">
+        <div class="row justify-content-center">
             <div class="col-8">
-              <h1 class="mt-2">Добавить преподователя</h1>
-              <hr class="mt-0 mb-4">
+                <h1 class="mt-2">Добавить преподавателя</h1>
+                <hr class="mt-0 mb-4">
                 <form method="post" novalidate>
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button type="submit" class="btn btn-success">Добавить</button>
+                    {% csrf_token %}
+                    {% for field in form %}
+                        <div class="form-group">
+                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                            {{ field }}
+                            {% if field.help_text %}
+                                <small class="form-text text-muted">{{ field.help_text }}</small>
+                            {% endif %}
+                            {% for error in field.errors %}
+                                <div class="alert alert-danger" role="alert">
+                                    {{ error }}
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endfor %}
+                    <button type="submit" class="btn btn-success">Добавить</button>
                 </form>
             </div>
-          </div>
+        </div>
     </div>
 </body>
 </html>
