--- a/api/teacher/templates/teacher.html
+++ b/api/teacher/templates/teacher.html
@@ -15,6 +15,7 @@
         <a href="{% url 'disciplinelist' %}"><button class="btn btn-primary" type="button">Список Дисциплин</button></a>
         <a href="{% url 'create' %}"><button class="btn btn-primary" type="button">Добавить группу</button></a>
         <a href="{% url 'createteacher' %}"><button class="btn btn-primary" type="button">Добавить преподователя</button></a>
+        <a href="{% url 'admin:index' %}"><button class="btn btn-primary" type="button">Админ</button></a>
         </p>
         <p>
         <a href="{% url 'createconnects' %}"><button class="btn btn-primary" type="button">Связать</button></a>
